--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ repositories {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: "kotlinx-serialization"
+apply plugin: 'kotlin-native-cocoapods'
 
 android {
     compileSdkVersion 29
@@ -34,12 +35,26 @@ android {
 }
 
 kotlin {
+
     android("android")
-    iosX64("ios") {
+    version = "1.0.0"
+    cocoapods {
+        summary = "Regions module testing"
+        homepage = "https://www.privateinternetaccess.com"
+        frameworkName = "Regions"
+    }
+
+    iosX64("iosX64") {
         binaries {
-            framework()
+            framework("a")
         }
     }
+    iosArm64("iosArm64") {
+        binaries {
+            framework("b")
+        }
+    }
+
     sourceSets {
         commonMain.dependencies {
             // Commons
@@ -70,6 +85,7 @@ kotlin {
             implementation 'org.jetbrains.kotlinx:kotlinx-serialization-runtime-native:0.20.0'
         }
     }
+
 }
 
 // This task attaches native framework built from ios module to Xcode project
@@ -79,7 +95,7 @@ kotlin {
 // make sure all Gradle infrastructure exists (gradle.wrapper, gradlew).
 task copyFramework {
     def buildType = project.findProperty('kotlin.build.type') ?: 'DEBUG'
-    def target = project.findProperty('kotlin.target') ?: 'ios'
+    def target = project.findProperty('kotlin.target') ?: 'iosArm64'
     dependsOn kotlin.targets."$target".binaries.getFramework(buildType).linkTask
 
     doLast {
