--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,6 @@ android {
 }
 
 kotlin {
-
-    android("android")
     version = "1.0.0"
     cocoapods {
         summary = "Regions module testing"
@@ -44,15 +42,14 @@ kotlin {
         frameworkName = "Regions"
     }
 
-    iosX64("iosX64") {
-        binaries {
-            framework("a")
+    targets {
+        final def iOSPreset = System.getenv('SDK_NAME')?.startsWith("iphoneos") ? presets.iosArm64 : presets.iosX64
+        fromPreset(iOSPreset, "iOS") {
+            binaries {
+                framework("a")
+            }
         }
-    }
-    iosArm64("iosArm64") {
-        binaries {
-            framework("b")
-        }
+        fromPreset(presets.android, "android")
     }
 
     sourceSets {
@@ -78,7 +75,7 @@ kotlin {
             implementation 'com.android.support:appcompat-v7:28.0.0'
             implementation 'com.android.support.constraint:constraint-layout:1.1.3'
         }
-        iosMain.dependencies {
+        iOSMain.dependencies {
             // Commons
             implementation 'io.ktor:ktor-client-ios:1.3.2'
             implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-native:1.3.5-native-mt'
@@ -95,11 +92,10 @@ kotlin {
 // make sure all Gradle infrastructure exists (gradle.wrapper, gradlew).
 task copyFramework {
     def buildType = project.findProperty('kotlin.build.type') ?: 'DEBUG'
-    def target = project.findProperty('kotlin.target') ?: 'iosArm64'
-    dependsOn kotlin.targets."$target".binaries.getFramework(buildType).linkTask
+    dependsOn kotlin.targets.iOS.binaries.getFramework(buildType).linkTask
 
     doLast {
-        def srcFile = kotlin.targets."$target".binaries.getFramework(buildType).outputFile
+        def srcFile = kotlin.targets.iOS.binaries.getFramework(buildType).outputFile
         def targetDir = getProperty('configuration.build.dir')
         copy {
             from srcFile.parent
