GEN4 ICMP Ping logic

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,8 +87,8 @@ task copyFramework {
         copy {
             from srcFile.parent
             into targetDir
-            include 'app.framework/**'
-            include 'app.framework.dSYM'
+            include 'Regions.framework/**'
+            include 'Regions.framework.dSYM'
         }
     }
 }
