--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,28 +53,28 @@ kotlin {
 
     sourceSets {
         commonMain.dependencies {
-            implementation 'io.ktor:ktor-client-core:1.3.2'
-            implementation 'org.jetbrains.kotlin:kotlin-stdlib-common'
-            implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.3.5-native-mt'
-            implementation 'org.jetbrains.kotlinx:kotlinx-serialization-runtime-common:0.20.0'
+            implementation "io.ktor:ktor-client-core:$ktor_version"
+            implementation "org.jetbrains.kotlin:kotlin-stdlib-common"
+            implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$coroutines_version"
+            implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-common:$serialization_version"
         }
         commonTest.dependencies {
-            implementation 'org.jetbrains.kotlin:kotlin-test-common'
-            implementation 'org.jetbrains.kotlin:kotlin-test-annotations-common'
+            implementation "org.jetbrains.kotlin:kotlin-test"
+            implementation "org.jetbrains.kotlin:kotlin-test-junit"
+            implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
         }
         androidMain.dependencies {
-            implementation 'io.ktor:ktor-client-android:1.3.2'
-            implementation 'org.jetbrains.kotlin:kotlin-stdlib'
-            implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5-native-mt'
-            implementation 'org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0'
+            implementation "io.ktor:ktor-client-android:$ktor_version"
+            implementation "org.jetbrains.kotlin:kotlin-stdlib"
+            implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+            implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
         }
         iOSMain.dependencies {
-            implementation 'io.ktor:ktor-client-ios:1.3.2'
-            implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-native:1.3.5-native-mt'
-            implementation 'org.jetbrains.kotlinx:kotlinx-serialization-runtime-native:0.20.0'
+            implementation "io.ktor:ktor-client-ios:$ktor_version"
+            implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-native:$coroutines_version"
+            implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-native:$serialization_version"
         }
     }
-
 }
 
 task copyFramework {
