--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
 kotlin.code.style=official
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx2560m
+
+coroutines_version=1.3.5-native-mt
+serialization_version=0.20.0
+ktor_version=1.3.2
