--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-rootProject.name = 'regions'
+rootProject.name = 'regions-project'
 enableFeaturePreview('GRADLE_METADATA')
-include ':app'
+include ':regions'
